test/bad/dup_func_def.dws
void main() {
	print("in first main")
}

void main() {
    print("in second main")
}
